frontend/test/should_pass/annot_004.grg
rule r {
	-e[prio=10000] : Edge->;

	modify {
	}
}

