frontend/test/should_fail/annot_006.grg
rule r {
	pattern {
		:Node [prio=42];
	}
	modify {}
}
